--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
     "sonner": "^1.3.1",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.2.0",
