--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "twitch-clone",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@clerk/nextjs": "^4.29.1",
-    "@clerk/themes": "^1.7.9",
-    "@livekit/components-react": "^1.5.1",
-    "@prisma/client": "^5.7.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "jwt-decode": "^4.0.0",
-    "livekit-client": "^1.15.8",
-    "livekit-server-sdk": "^1.2.7",
-    "lucide-react": "^0.307.0",
-    "next": "14.0.4",
-    "next-themes": "^0.2.1",
-    "query-string": "^8.1.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.3",
-    "sonner": "^1.3.1",
-    "svix": "^1.15.0",
-    "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.9.2",
-    "uuid": "^9.0.1",
-    "zustand": "^4.4.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^9.0.7",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+	"name": "twitch-clone",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@clerk/nextjs": "^4.27.3",
+		"@clerk/themes": "^1.7.9",
+		"@livekit/components-react": "^1.4.2",
+		"@prisma/client": "^5.7.1",
+		"@radix-ui/react-avatar": "^1.0.4",
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slider": "^1.1.2",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-tooltip": "^1.0.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"date-fns": "^3.2.0",
+		"jwt-decode": "^4.0.0",
+		"livekit-client": "^1.15.4",
+		"livekit-server-sdk": "^1.2.7",
+		"lucide-react": "^0.307.0",
+		"next": "14.0.4",
+		"next-themes": "^0.2.1",
+		"query-string": "^8.1.0",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.3",
+		"sonner": "^1.3.1",
+		"svix": "^1.15.0",
+		"tailwind-merge": "^2.2.0",
+		"tailwindcss-animate": "^1.0.7",
+		"usehooks-ts": "^2.9.2",
+		"uuid": "^9.0.1",
+		"zustand": "^4.4.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@types/uuid": "^9.0.7",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.4",
+		"postcss": "^8",
+		"prisma": "^5.7.1",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
