--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@clerk/themes": "^1.7.9",
 		"@livekit/components-react": "^1.4.2",
 		"@prisma/client": "^5.7.1",
+		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-avatar": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
@@ -24,19 +25,22 @@
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-switch": "^1.0.3",
 		"@radix-ui/react-tooltip": "^1.0.7",
+		"@tanstack/react-query": "^5.17.19",
+		"@tanstack/react-query-devtools": "^5.17.21",
 		"@uploadthing/react": "^6.2.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"date-fns": "^3.2.0",
+		"embla-carousel-react": "^8.0.0-rc21",
 		"jwt-decode": "^4.0.0",
 		"livekit-client": "^1.15.4",
 		"livekit-server-sdk": "^1.2.7",
 		"lucide-react": "^0.307.0",
-		"next": "14.0.4",
+		"next": "^14.1.0",
 		"next-themes": "^0.2.1",
 		"query-string": "^8.1.0",
-		"react": "^18",
-		"react-dom": "^18",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.49.3",
 		"sonner": "^1.3.1",
 		"svix": "^1.15.0",
@@ -54,7 +58,7 @@
 		"@types/uuid": "^9.0.7",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
-		"eslint-config-next": "14.0.4",
+		"eslint-config-next": "^14.1.0",
 		"postcss": "^8",
 		"prisma": "^5.7.1",
 		"tailwindcss": "^3.3.0",
