--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbo",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@clerk/nextjs": "^4.27.3",
@@ -27,6 +28,7 @@
 		"@radix-ui/react-tooltip": "^1.0.7",
 		"@tanstack/react-query": "^5.17.19",
 		"@tanstack/react-query-devtools": "^5.17.21",
+		"@tanstack/react-table": "^8.11.7",
 		"@uploadthing/react": "^6.2.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
